ESL has only one good thing - bracket generation :Henning-Wehn obviously, they mean a lot to me - because on Easter Sunday i used to hunt Easter onion

--- a/src/Lang/program.txt
+++ b/src/Lang/program.txt
@@ -16,7 +16,7 @@ Liquipedia private guild? sounds like i'll win - i will be peer-to-peer tourname
   it's not Mando's big mission - but a worthy quest
   and i will climb with passion like Alex Honnold on a hotel in Angola
 i will take best from
-  ESL - palyer sign-up and bracket generation
+  ESL - bracket generation
   Liquipedia - light ui and compact light brackets
   Challonge - being for everyone
   Aligulac - unbiased player rating
